[gd_scene load_steps=7 format=3 uid="uid://clvnymglba75m"]

[ext_resource type="Script" path="res://game_screen/game_screen.gd" id="1_adngp"]
[ext_resource type="LabelSettings" uid="uid://b16o7l2dvtpqa" path="res://resources/GM_32_Dark.tres" id="1_b0rvt"]
[ext_resource type="Texture2D" uid="uid://6r0ppna7todg" path="res://assets/ui/blue_button00.png" id="2_sfcje"]
[ext_resource type="Texture2D" uid="uid://ob0igwdn416x" path="res://assets/ui/yellow_button00.png" id="3_eus8s"]
[ext_resource type="Texture2D" uid="uid://cg304ghra85qr" path="res://assets/ui/green_button00.png" id="4_bpqtq"]
[ext_resource type="LabelSettings" uid="uid://bdkk8jdhpbrp1" path="res://resources/GM_32_White.tres" id="5_geqia"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adngp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_b0rvt")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = ExtResource("1_b0rvt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_b0rvt")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 00"
label_settings = ExtResource("1_b0rvt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_sfcje")
texture_pressed = ExtResource("3_eus8s")
texture_hover = ExtResource("4_bpqtq")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_geqia")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/ExitButton" to="." method="on_exit_button_pressed"]
